fix : 바깥 서버를 부르는 동안 트랜잭션도 스레드도 붙잡지 않는다
세 차례 감사에서 나온 것들이다. 공통점은 **증상이 안 보인다**는 것 — 기능은 그대로
돌고, 커넥션이 묶이거나 유료 호출이 두 배로 나가거나 원장이 조용히 '기타'가 될 뿐이다.

경계
- 조회·모델 질의를 트랜잭션 밖으로. 세 서비스를 추리기(readOnly) → 질의 → 입히기로 가르고
  프록시는 ObjectProvider 자기주입으로 잡는다.
- 진입점 네 곳이 그 분리를 다시 감싸고 있었다(미분류 화면·연동 2인자·기관찾기·가맹점조회).
- RestClient 네 곳에 타임아웃이 없었다. 제공자 호출은 쓰기 트랜잭션 안이고 스케줄러 스레드는
  하나라, 무응답 하나로 모든 배치가 재기동 전까지 멎을 수 있었다. 풀을 4로 올린다.

모른다는 것을 안다고 적지 않는다
- 통로가 꺼져 있어도 '헛물'로 세어 3회면 '기타'로 종결됐다. 판정 근거를 answered
  (물어보고 답받은 곳)로 바꿔 다섯 갈래를 한 규칙으로 막는다.
- '기타'를 진짜 중분류로 관측해 번호가 영구 MULTI 로 굳던 것.

더미 격리
- app_user.real_person 을 두고 후속 단계 진입에서 한 번 가른다. 표시는 적재가 정하고,
  어긋나면 원장으로 되짚어 스스로 고친다.
- 전역 판정 표로 가는 문 둘이 열려 있었다 — 22행 중 20행이 더미로 만들어져 있었다.
- Gemini 는 실사용자 것만 부른다(다섯 자리). 더미는 고정 템플릿으로 간다.

무료 통로
- 나가는 문을 하나로 모은다. 예산(40/분)·차선 넷·중복 접기·상한을 큐가 정하고,
  차선은 필수 인자라 새 코드가 고르지 않고 지나갈 길이 없다. 그것을 시험이 지킨다.
- 화면 문장 셋을 저장해 두고 하루 한 번 갱신한다. 실패하면 있던 문장이 그대로 남는다.
- 브랜드를 큐로 옮겨 회차 상한·회전 창을 걷어낸다.

그 밖에
- 브랜드 카탈로그가 부분문자열로 맞아 실사용자 상호 81곳에 엉뚱한 브랜드를 박고 있었다.
- 재분류가 리포트 캐시를 안 깨 화면이 옛 숫자를 계속 보여줬다.
- 법무 정본이 "외부 AI 에 가맹점명을 보내지 않는다"·"국외 이전 없음"이라고 적고 있었다.
  코드를 되돌리지 않고 정본과 원칙 1 을 사실에 맞췄다.

V23 콜레이션·인덱스, V24 real_person·판정표 정리, V25 문장 저장소.
마이그레이션은 V21 사본에 예행해 Flyway 적용·validate·기동까지 확인했다. 시험 436개.